# intentkit

./: .cursorrules  CHANGELOG.md  Dockerfile  LLM.md  README.md  docker-compose.yml  example.env  lint.sh  pyproject.toml
.github/workflows/: build.yml
.trae/rules/: project_rules.md
abstracts/: agent.py  skill.py
app/: api.py  autonomous.py  checker.py  readonly.py  scheduler.py  singleton.py  telegram.py  twitter.py
app/admin/: README.md  __init__.py  account_checking.py  agent_generator.py  agent_generator_api.py  api.py  credit.py  metadata.py  scheduler.py  schema.py  user.py
app/auth/: __init__.py
app/config/: config.py
app/core/: agent.py  credit.py  engine.py  node.py  prompt.py  skill.py
app/entrypoints/: agent_api.py  autonomous.py  openai_compatible.py  tg.py  twitter.py  web.py
clients/: cdp.py  twitter.py
docs/: README.md  agent_api.md  agent_generation_logging.md  agentkit_upgrade_guide.md  openai_compatible.md
docs/contributing/: skills.md
docs/skills/: agent_api_key.md
intentkit/: MANIFEST.in  __init__.py  pyproject.toml
intentkit/abstracts/: skill.py
intentkit/clients/: cdp.py
intentkit/config/: config.py
intentkit/core/: agent.py  api.py  client.py  credit.py  engine.py  node.py  prompt.py  skill.py
intentkit/models/: agent.py  agent_data.py  agent_schema.json  app_setting.py  chat.py  conversation.py  credit.py  db.py  db_mig.py  generator.py  llm.py  skill.py  user.py
intentkit/skills/: base.py
intentkit/utils/: error.py  logging.py
models/: agent.py  agent_data.py  agent_schema.json  chat.py  conversation.py  credit.py  generator.py  llm.py  redis.py  skill.py
scripts/: batch_migrate_skills.py  cdp_list_token_balances_example.py  check_credit_event_consistency.py  check_credit_event_consistency_with_base.py  check_credit_transaction_consistency.py  check_heartbeat.py  fix_credit_accounts_from_transactions.py  fix_credit_event_consistency.py  fix_credit_event_consistency_optimized.py  fix_credit_precision.py  fix_invalid_wallets.py  migrate_base_amounts.py  migrate_credit_account_statistics.py  migrate_credit_transaction_amounts.py
skills/: base.py
skills/carv/: __init__.py  base.py  fetch_news.py  onchain_query.py  token_info_and_price.py
skills/chainlist/: schema.json
skills/common/: current_time.py
skills/cookiefun/: base.py  get_account_details.py  get_account_feed.py  get_account_smart_followers.py  get_sectors.py  schema.json  search_accounts.py
skills/dexscreener/: schema.json
skills/dune_analytics/: fetch_kol_buys.py  fetch_nation_metrics.py  schema.json
skills/lifi/: README.md  __init__.py  base.py  schema.json  token_execute.py  token_quote.py  utils.py
skills/nation/: nft_check.py
utils/: error.py  logging.py
(+195 files in other folders)
