[project]
name = "intentkit-workspace"
version = "0.5.0"
description = "Intent-based AI Agent Platform - Workspace"
authors = [{ name = "Ruihua", email = "ruihua@crestal.network" }]
requires-python = "==3.12.*"
readme = "README.md"
dependencies = [
    "aiogram>=3.17.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.14.0",
    "anyio>=4.8.0",
    "APScheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "aws-secretsmanager-caching>=1.1.3",
    "beautifulsoup4>=4.13.4",
    "boto3 (>=1.37.23,<2.0.0)",
    "botocore>=1.35.97",
    "coinbase-agentkit (>=0.6.0,<0.7.0)",
    "coinbase-agentkit-langchain>=0.5.0",
    "cron-validator (>=1.0.8,<2.0.0)",
    "epyxid>=0.3.3",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.8",
    "filetype (>=1.2.0,<2.0.0)",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "jsonref>=1.1.0",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.43",
    "langchain-mcp-adapters>=0.0.11",
    "langchain-openai>=0.3.8",
    "langchain-postgres>=0.0.13",
    "langchain-text-splitters>=0.3.8",
    "langchain-xai>=0.2.1",
    "langgraph (>=0.6.1,<0.7.0)",
    "langgraph-checkpoint>=2.0.18",
    "langgraph-checkpoint-postgres>=2.0.16,<2.0.26",
    "langgraph-prebuilt (>=0.6.1,<0.7.0)",
    "langmem>=0.0.27",
    "mypy-boto3-s3 (>=1.37.24,<2.0.0)",
    "openai>=1.59.6",
    "pgvector>=0.3.6",
    "pillow (>=11.1.0,<12.0.0)",
    "psycopg>=3.2.9",
    "psycopg-pool>=3.2.4",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "pydantic>=2.10.6,<2.11.0",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "pytz>=2025.1",
    "pyyaml>=6.0.2",
    "redis (>=5.2.1,<7.0.0)",
    "requests>=2.32.3",
    "sentry-sdk[fastapi]>=2.20.0",
    "slack-sdk>=3.34.0",
    "sqlalchemy[asyncio]>=2.0.37",
    "supabase>=2.16.0",
    "telegramify-markdown (>=0.5.0,<0.6.0)",
    "tweepy[async]>=4.15.0",
    "uvicorn>=0.34.0,<1.0.0",
    "bip32>=2.0.0",
    "eth-keys>=0.4.0",
    "eth-utils>=2.1.0",
    "jsonschema>=4.24.0",
    "starlette>=0.47.1",
    "aiohttp>=3.11.16",
    "requests-oauthlib>=2.0.0",
    "tenacity>=9.1.2",
    "web3>=7.10.0",
    "cdp-sdk>=1.22.0",
    "pyjwt>=2.10.1",
    "langchain-deepseek>=0.1.4",
    "intentkit",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9,<0.12",
    "jsonschema>=4.21.1,<5",
    "deptry>=0.23.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "intentkit",
]

[tool.uv.sources]
intentkit = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]

[tool.deptry]
known_first_party = ["intentkit"]
